--- a/requirements.txt
+++ b/requirements.txt
@@ -1,104 +1,42 @@
 absl-py==1.0.0
-anyio @ file:///home/conda/feedstock_root/build_artifacts/anyio_1641898044106/work/dist
-argon2-cffi @ file:///home/builder/ci_310/argon2-cffi_1641902187184/work
 astunparse==1.6.3
-attrs @ file:///home/conda/feedstock_root/build_artifacts/attrs_1640799537051/work
-Babel @ file:///home/conda/feedstock_root/build_artifacts/babel_1619719576210/work
-backcall @ file:///home/conda/feedstock_root/build_artifacts/backcall_1592338393461/work
-backports.functools-lru-cache @ file:///home/conda/feedstock_root/build_artifacts/backports.functools_lru_cache_1618230623929/work
-bleach @ file:///home/conda/feedstock_root/build_artifacts/bleach_1629908509068/work
-brotlipy==0.7.0
 cachetools==5.0.0
 certifi==2021.10.8
-cffi @ file:///home/builder/ci_310/cffi_1642753365720/work
-charset-normalizer @ file:///home/conda/feedstock_root/build_artifacts/charset-normalizer_1641584610847/work
-cryptography @ file:///home/builder/ci_310/cryptography_1640808721005/work
-debugpy @ file:///home/builder/ci_310/debugpy_1640789504635/work
-decorator @ file:///home/conda/feedstock_root/build_artifacts/decorator_1641555617451/work
-defusedxml @ file:///home/conda/feedstock_root/build_artifacts/defusedxml_1615232257335/work
-entrypoints @ file:///home/conda/feedstock_root/build_artifacts/entrypoints_1605121927639/work/dist/entrypoints-0.3-py2.py3-none-any.whl
+charset-normalizer==2.0.10
 flatbuffers==2.0
-gast==0.5.3
+gast==0.4.0
 google-auth==2.5.0
 google-auth-oauthlib==0.4.6
 google-pasta==0.2.0
 grpcio==1.43.0
 h5py==3.6.0
-idna @ file:///home/conda/feedstock_root/build_artifacts/idna_1642433548627/work
-importlib-metadata @ file:///home/conda/feedstock_root/build_artifacts/importlib-metadata_1642513920615/work
-importlib-resources @ file:///home/conda/feedstock_root/build_artifacts/importlib_resources_1635615662634/work
-ipykernel @ file:///home/conda/feedstock_root/build_artifacts/ipykernel_1642098122071/work/dist/ipykernel-6.7.0-py3-none-any.whl
-ipython @ file:///home/conda/feedstock_root/build_artifacts/ipython_1642634582314/work
-ipython-genutils==0.2.0
-jedi @ file:///home/conda/feedstock_root/build_artifacts/jedi_1637175074658/work
-Jinja2 @ file:///home/conda/feedstock_root/build_artifacts/jinja2_1636510082894/work
-json5 @ file:///home/conda/feedstock_root/build_artifacts/json5_1600692310011/work
-jsonschema @ file:///home/conda/feedstock_root/build_artifacts/jsonschema-meta_1642000296051/work
-jupyter-client @ file:///home/conda/feedstock_root/build_artifacts/jupyter_client_1642858610849/work
-jupyter-core @ file:///home/conda/feedstock_root/build_artifacts/jupyter_core_1636814267019/work
-jupyter-server @ file:///home/conda/feedstock_root/build_artifacts/jupyter_server_1642861369800/work
-jupyterlab @ file:///home/conda/feedstock_root/build_artifacts/jupyterlab_1642103664616/work
-jupyterlab-pygments @ file:///home/conda/feedstock_root/build_artifacts/jupyterlab_pygments_1601375948261/work
-jupyterlab-server @ file:///home/conda/feedstock_root/build_artifacts/jupyterlab_server_1641592475363/work
-keras==2.8.0rc1
+idna==3.3
+importlib-metadata==4.10.1
+keras==2.7.0
 Keras-Preprocessing==1.1.2
 libclang==13.0.0
 Markdown==3.3.6
-MarkupSafe @ file:///home/builder/ci_310/markupsafe_1640791577099/work
-matplotlib-inline @ file:///home/conda/feedstock_root/build_artifacts/matplotlib-inline_1631080358261/work
-mistune==0.8.3
-nbclassic @ file:///home/conda/feedstock_root/build_artifacts/nbclassic_1641934401341/work
-nbclient @ file:///home/conda/feedstock_root/build_artifacts/nbclient_1642144614450/work
-nbconvert @ file:///home/conda/feedstock_root/build_artifacts/nbconvert_1643237859024/work
-nbformat @ file:///home/conda/feedstock_root/build_artifacts/nbformat_1617383142101/work
-nest-asyncio @ file:///home/conda/feedstock_root/build_artifacts/nest-asyncio_1638419302549/work
-notebook @ file:///home/conda/feedstock_root/build_artifacts/notebook_1643149609895/work
 numpy==1.22.1
-oauthlib==3.1.1
+oauthlib==3.2.0
 opencv-python==4.5.5.62
 opt-einsum==3.3.0
-packaging @ file:///home/conda/feedstock_root/build_artifacts/packaging_1637239678211/work
-pandocfilters @ file:///home/conda/feedstock_root/build_artifacts/pandocfilters_1631603243851/work
-parso @ file:///home/conda/feedstock_root/build_artifacts/parso_1638334955874/work
-pexpect @ file:///home/conda/feedstock_root/build_artifacts/pexpect_1602535608087/work
-pickleshare @ file:///home/conda/feedstock_root/build_artifacts/pickleshare_1602536217715/work
-prometheus-client @ file:///home/conda/feedstock_root/build_artifacts/prometheus_client_1643149052602/work
-prompt-toolkit @ file:///home/conda/feedstock_root/build_artifacts/prompt-toolkit_1639065841292/work
-protobuf==3.19.3
-ptyprocess @ file:///home/conda/feedstock_root/build_artifacts/ptyprocess_1609419310487/work/dist/ptyprocess-0.7.0-py2.py3-none-any.whl
+pkg_resources==0.0.0
+protobuf==3.19.4
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
-pycparser @ file:///home/conda/feedstock_root/build_artifacts/pycparser_1636257122734/work
-Pygments @ file:///home/conda/feedstock_root/build_artifacts/pygments_1641580240686/work
-pyOpenSSL @ file:///home/conda/feedstock_root/build_artifacts/pyopenssl_1633192417276/work
-pyparsing @ file:///home/conda/feedstock_root/build_artifacts/pyparsing_1642753572664/work
-pyrsistent @ file:///home/builder/ci_310/pyrsistent_1640807196327/work
-PySocks @ file:///home/conda/feedstock_root/build_artifacts/pysocks_1635862405051/work
-python-dateutil @ file:///home/conda/feedstock_root/build_artifacts/python-dateutil_1626286286081/work
-pytz @ file:///home/conda/feedstock_root/build_artifacts/pytz_1633452062248/work
-pyzmq @ file:///home/builder/ci_310/pyzmq_1640794096902/work
-requests @ file:///home/conda/feedstock_root/build_artifacts/requests_1641580202195/work
-requests-oauthlib==1.3.0
+requests==2.27.1
+requests-oauthlib==1.3.1
 rsa==4.8
-Send2Trash @ file:///home/conda/feedstock_root/build_artifacts/send2trash_1628511208346/work
-six @ file:///home/conda/feedstock_root/build_artifacts/six_1620240208055/work
-sniffio @ file:///home/conda/feedstock_root/build_artifacts/sniffio_1635844648777/work
+six==1.16.0
 tensorboard==2.8.0
 tensorboard-data-server==0.6.1
 tensorboard-plugin-wit==1.8.1
-tensorflow==2.8.0rc1
+tensorflow==2.7.0
+tensorflow-estimator==2.7.0
 tensorflow-io-gcs-filesystem==0.23.1
 termcolor==1.1.0
-terminado @ file:///home/conda/feedstock_root/build_artifacts/terminado_1636052207439/work
-testpath @ file:///home/conda/feedstock_root/build_artifacts/testpath_1621261527237/work
-tf-estimator-nightly==2.8.0.dev2021122109
-tornado @ file:///home/builder/ci_310/tornado_1640795392144/work
-traitlets @ file:///home/conda/feedstock_root/build_artifacts/traitlets_1635260543454/work
 typing_extensions==4.0.1
-urllib3 @ file:///home/conda/feedstock_root/build_artifacts/urllib3_1641584929973/work
-wcwidth @ file:///home/conda/feedstock_root/build_artifacts/wcwidth_1600965781394/work
-webencodings==0.5.1
-websocket-client @ file:///home/conda/feedstock_root/build_artifacts/websocket-client_1638949723239/work
+urllib3==1.26.8
 Werkzeug==2.0.2
 wrapt==1.13.3
-zipp @ file:///home/conda/feedstock_root/build_artifacts/zipp_1641731510635/work
+zipp==3.7.0
