--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ cachetools==5.0.0
 certifi==2021.10.8
 charset-normalizer==2.0.11
 cycler==0.11.0
+fastrlock==0.8
 flatbuffers==2.0
 fonttools==4.29.1
 gast==0.5.3
@@ -22,22 +23,21 @@ kiwisolver==1.3.2
 libclang==13.0.0
 Markdown==3.3.6
 matplotlib==3.5.1
-mkl-fft==1.3.1
-mkl-service==2.4.0
 networkx==2.6.3
-numpy==1.22.1
+numpy==1.22.2
 oauthlib==3.2.0
 opencv-python==4.5.5.62
 opt-einsum==3.3.0
 packaging==21.3
-pandas==1.4.0
 Pillow==9.0.1
 protobuf==3.19.4
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
 pyparsing==3.0.7
+PyQt5==5.15.6
+PyQt5-Qt5==5.15.2
+PyQt5-sip==12.9.1
 python-dateutil==2.8.2
-pytz==2021.3
 PyWavelets==1.2.0
 requests==2.27.1
 requests-oauthlib==1.3.1
@@ -45,20 +45,18 @@ rsa==4.8
 scikit-image==0.19.1
 scikit-learn==1.0.2
 scipy==1.7.3
+six==1.16.0
 tensorboard==2.8.0
 tensorboard-data-server==0.6.1
 tensorboard-plugin-wit==1.8.1
 tensorflow==2.8.0
-tensorflow-cpu==2.8.0
+tensorflow-gpu==2.8.0
 tensorflow-io-gcs-filesystem==0.23.1
 termcolor==1.1.0
 tf-estimator-nightly==2.8.0.dev2021122109
 threadpoolctl==3.1.0
-tifffile==2021.11.2
-torch==1.10.2
-torchvision==0.11.3
-tqdm==4.62.3
-typing_extensions==4.0.1
+tifffile==2022.2.2
+typing-extensions==4.0.1
 urllib3==1.26.8
 Werkzeug==2.0.2
 wrapt==1.13.3
